grpc/k8s/k8s-grpcserver-product/minikube/k8s-3-service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcserver-product-rpc
  namespace: n-anderjvila-learning
spec:
  clusterIP: None
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: grpcserver-product
