grpc/k8s/k8s-grpcserver-product/minikube/k8s-3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcserver-product-service
  namespace: n-anderjvila-learning
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30011
      name: tcp-8080
    - protocol: TCP
      port: 9090
      nodePort: 30501
      name: tcp-9090
  selector:
    app: n-anderjvila-learning
---
apiVersion: v1
kind: Service
metadata:
  name: grpcserver-product-ip-service
  namespace: n-anderjvila-learning
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: tcp-8080
      targetPort: 8080
    - port: 9090
      protocol: TCP
      name: tcp-9090
      targetPort: 9090
  selector:
    app: grpcserver-product
